# BountyBoard

./: .env  .env.example  .eslintrc.json  .gitignore  .gitmodules  README.md  Speech.md  next.config.mjs  package.json  pnpm-lock.yaml
abis/: BountyBoard.json
app/: globals.css  layout.tsx  page.tsx
app/boards/: page.tsx
app/providers/: Web3Providers.tsx
app/utils/: contract.ts
components/: AddBoardModal.tsx  BoardActionsDropdown.tsx  BoardCard.tsx  BoardForm.tsx  Boards.tsx  BoardsPageSkeleton.tsx  BountyList.tsx  ConnectWalletButton.tsx  CreateTaskModal.tsx  DynamicModal.tsx  ImageUpload.tsx  MemberSubmissionTable.tsx  Navigation.tsx  ProfileSettingsModal.tsx  SubmissionDetailsModal.tsx  SubmitProofModal.tsx  TaskList.tsx
components/ui/: Address.tsx  alert.tsx  badge.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  loading.tsx  table.tsx  tabs.tsx  toast.tsx
constants/: BountyBoard.json  UserProfile.json  attestaion.ts  contract-address.ts
contract/: BountyBoard.sol  README.md  foundry.toml  start-local-chain.sh
contract/EVM/: .gitignore  (+1 more)
contract/SVM/: Cargo.toml
contract/SVM/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
graphql/: queries.ts
hooks/: contract.ts  useAddressProfiles.ts  useContract.ts  useMediaQuery.ts
lib/: uuid.ts
providers/: TelegramAuthContext.tsx  Web3Providers.tsx  aiachain.ts  config.ts  monad.ts  my-anvil.ts
scripts/: generate-aes-key.ts
services/: aiReview.ts
store/: userStore.ts
types/: profile.ts  types.ts
utils/: chain.ts  contract.ts  encryption-server.ts  encryption.ts
(+46 files in other folders)
